[tool.poetry]
name = "vae"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.2"
tensorflow = "^2.9.1"
matplotlib = "^3.5.2"
sklearn = "^0.0"
tabulate = "^0.8.10"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
